--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "dependencies": {
     "antd": "^5.24.0",
+    "csv-parser": "^3.2.0",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "sequelize": "^6.37.5",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "xlsx": "^0.18.5"
   },
   "main": "./dist/electron/main.cjs",
   "devDependencies": {
